--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,20 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--heading-color);
 }
 
+.show {
+    display: block;
+}
+
+.hide {
+    display: none;
+}
+
+.alert {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
 /* start styling for navigation bar */
 .bg-nav {
     background: rgba(0, 0, 0, 0.9);
@@ -92,15 +106,23 @@ h1, h2, h3, h4, h5, h6 {
 
 /* start styling for home section */
 .home {
-    background-image: url(../images/hero-bg.jpg);
+    background-color: #222222;
+    /* background-image: url(../images/hero-bg.jpg); */
     height: 100vh;
-    background-position: center center;
+    /* background-position: center center;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: fixed; */
     position: relative;
 }
 
-.home::before {
+#particles-js {
+    height: 100%;
+    width: 100%;
+    /* background-color: #181414; */
+    position: absolute;
+}
+
+/* .home::before {
     content: "";
     background-color: rgba(0, 0, 0, 0.6);
     position: absolute;
@@ -108,7 +130,7 @@ h1, h2, h3, h4, h5, h6 {
     left: 0px;
     height: 100vh;
     width: 100%;
-}
+} */
 
 .home .home-content {
     position: relative;
@@ -122,10 +144,6 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.7;
 }
 
-.home-content p {
-    color: #fff;
-    font-size: 2rem;
-}
 
 .home .cvBtn .btn {
     font-size: 18px;
